[package]
name = "qt-binding"
version = "0.1.0"
authors = ["Lucien XU <sfietkonstantin@free.fr>"]
edition = "2018"

[dependencies]
qt-sys = {path = "../qt-sys"}
futures-core-preview = {version = "=0.3.0-alpha.18", optional = true}
futures-util-preview = {version = "=0.3.0-alpha.18", optional = true}

[build-dependencies]
qt-binding-build = {path = "../qt-binding-build"}

[features]
gui = ["qt-sys/gui", "qt-binding-build/gui"]
widgets = ["gui", "qt-sys/widgets", "qt-binding-build/widgets"]
futures-executor = ["futures-core-preview", "futures-util-preview"]