[package]
name = "test-qt-binding-app"
version = "1.0.0"
authors = ["Lucien XU <sfietkonstantin@free.fr>"]
edition = "2018"
build = "build.rs"

[dependencies]
qt-binding = {path = "../../qt-binding", features = ["gui", "futures-executor"]}
qt-sys = {path = "../../qt-sys"}

[build-dependencies]
qt-binding-build = {path = "../../qt-binding-build"}

